# get_nft_cost

./: .env.example  Makefile  ProjectWeek12.ipynb  README.md  pyproject.toml
get_dataset/: Dataset_0.2.csv  Dataset_0.3.csv  Dataset_v1.csv  data_from_api.ipynb  dataset_preprocessing.ipynb
predict/: NFT.ipynb
src/configs/: __init__.py  config.py
src/get_dataset/: Dataset_0.1.csv  Dataset_0.2.csv  Dataset_0.4_yb.csv  data_from_api.ipynb  dataset_preprocessing.ipynb
